feat: 전체 패키지 구조 변경
